--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,20 +6,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Go
+      - name: "Set up Go"
         uses: actions/setup-go@v1
         with:
           go-version: 1.14.x
         id: go
 
-      - name: Install golangci-lint
+      - name: "Install golangci-lint"
         run: |
           curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin latest
 
-      - name: Check out code
+      - name: "Check out code"
         uses: actions/checkout@v1
 
-      - name: Run golangci-lint
+      - name: "Run golangci-lint (unix tag)"
         run: |
           export PATH=$HOME/bin:$PATH
           golangci-lint run
+
+      - name: "Run golangci-lint (windows tag)"
+        run: |
+          export PATH=$HOME/bin:$PATH
+          GOOS=windows golangci-lint run
