--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
 
       - name: "Set up Go"
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
           go-version: 1.14.x
         id: go
@@ -35,7 +35,7 @@ jobs:
     steps:
 
       - name: "Set up Go"
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
           go-version: 1.14.x
         id: go
@@ -47,10 +47,6 @@ jobs:
         run: |
           make setup
 
-      - name: "Run golangci-lint (windows tag)"
+      - name: "Ensure embeds are up-to-date"
         run: |
-          INITIAL=$(md5sum ./cmd/pkged.go)
-          rm ./cmd/pkged.go
-          pkger -include /payloads -include /go.mod -o ./cmd
-          NOW=$(md5sum ./cmd/pkged.go)
-          [[ "$INITIAL" == "$NOW" ]]
+          make embed | grep up-to-date
